<?xml version="1.0"?>
<resources>
    <string name="app_name">حامی پت</string>
    <string name="home">خانه</string>
    <string name="title">عنوان</string>
    <string name="type">نوع</string>
    <string name="description">توضیحات</string>
    <string name="bookmark">نشان کردن</string>
    <string name="catName">دسته بندی</string>
    <string name="detail_title">تیتر جزییات</string>
    <string name="detail_date">98/03/27</string>
    <string name="notFound">چیزی برای مشاهده یافت نشد</string>
    <string name="signIn">ورود به حامی پت</string>
    <string name="signIn_btn">ورود</string>
    <string name="phoneNumber">شماره همراه</string>
    <string name="type_advertise">انتخاب نوع آگهی</string>
    <string name="hami">حمایتی</string>
    <string name="advertise">تبلیغاتی</string>
    <string name="noContent">نمایشی برای اطلاعات وجود ندارد</string>
    <string name="confirm_code">کد فعالسازی</string>
    <string name="btn_confirm">فعالسازی</string>
    <string name="login_confirm">کد فعالسازی ورود</string>
    <string name="login_number">شماره همراه</string>
    <string name="add_title">عنوان</string>
    <string name="add_desc">توضیحات</string>
    <string name="add_city">نام شهر</string>
    <string name="bookmark_selected">نشان شده</string>
    <string name="bookmark_unselected">نشان کردن</string>
    <string name="note">یادداشت</string>
    <string name="empty_note">یادداشتی نوشته نشده است.</string>
    <string name="show_google_map">نمایش موقعیت بر روی گوگل مپ</string>
    <string name="show_edit_location_map">ثبت یا ویرایش موقعیت</string>
    <string name="add_address">آدرس محل</string>
    <string name="add_picture">اضافه کردن عکس</string>
    <string name="cities_list">لیست شهرها</string>
    <string name="city_select">انتخاب شهر</string>
    <string name="insert_advertise">ثبت آگهی</string>
    <string name="read_file">دسترسی به عکس برای انتخاب عکس</string>
    <string name="my_advertise">آگهی های من</string>
    <string name="bookmarks">نشان شده ها</string>
    <string name="my_hamiPet">حامی پت من</string>
    <string name="check_number">ثبت شماره همراه</string>
    <string name="timer">زمان</string>
    <string name="confirm_location">ثبت موقعیت آدرس </string>
    <string name="success_process">"عملیات با موفقیت انجام شد"</string>
    <string name="failed_process">"عملیات با خطا انجام شد"</string>
    <string name="file_provider_authority">"ir.makapps.hami.provider"</string>
    <string name="app_package">"ir.makapps.hami"</string>
    <string name="noContentAndRefresh">نمایشی برای اطلاعات وجود ندارد برای دریافت مجدد صفحه را به سمت پایین بکشید</string>
    <string name="token">token_value</string>
    <string name="enough_picture">امکان افزودن عکس بیشتر نیست</string>
    <string name="map_key">eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiIsImp0aSI6IjEwYzA4MTg1MTNkNmY5Mzc3MTdmNGYzOTMwNzYyZTMyN2ZkNzUwZDk5MWMxNmJjN2ZhZWU4ZjM5ODEyZWM5YTEzNTU2ZDc1YjllNmI3Mzk5In0.eyJhdWQiOiI5MjEwIiwianRpIjoiMTBjMDgxODUxM2Q2ZjkzNzcxN2Y0ZjM5MzA3NjJlMzI3ZmQ3NTBkOTkxYzE2YmM3ZmFlZThmMzk4MTJlYzlhMTM1NTZkNzViOWU2YjczOTkiLCJpYXQiOjE1ODkyNjUzNzksIm5iZiI6MTU4OTI2NTM3OSwiZXhwIjoxNTkxODU3Mzc5LCJzdWIiOiIiLCJzY29wZXMiOlsiYmFzaWMiXX0.pmB0vxnDo1rOBN_6h9BClCkHtCSQyZyoaAVSYegH3n3s6ZhJipGVQFAu105OoiJPI1nIvWxK6ZfzEQ9QCbAUnnjiBlkuyxGZtOYaViryrCaTYdYVUepe33g-epOF_2BY52kSWI0mHxhazNklYN6t7tX4zHFjQhP4pQz0KzhOFw-4mX7Ip5Vxco4Ornc3hWCC27h6l7RzYDsNsMIjuj9k7VBCnCV6zxBuEMe6eUzHbeqDfKlvyf7S96V0liYTL6DTijiM8hhNKvKXfE7QxwwM2PZfGHnR1_fBuQkVTNIx59EUQFk_8vTdkp9D-9JfDdpTL-mGUI4RJQNj9mClqWw_Qw</string>
    <string name="add_note">برای به خاطر سپردن نکات درباره این آگهی میتوانید آن ها را یادداشت نمایید . یادداشت های شما در صفحه نشان شده ها در بخش یادداشت ها قابل مشاهده است .در صورت پاک شدن آگهی , یادداشت شما حذف خواهد شد.</string>
    <string name="txt_note">متن یادداشت</string>
    <string name="btn_cancel">انصراف</string>
    <string name="btn_save_note">ذخیره متن</string>
    <string name="insert_note_success">یادداشت شما ذخیره شد.</string>
    <string name="remove_note_success">یادداشت شما حذف شد.</string>
    <string name="empty_title">عنوان نباید خالی باشد.</string>
    <string name="empty_description">توضیحات نباید خالی باشد.</string>
    <string name="empty_address">آدرس نباید خای باشد.</string>
    <string name="empty_city">شهر نباید خالی باشد.</string>
    <string name="empty_fields">فیلدها نباید خالی باشند.</string>
    <string name="loading">در حال دریافت اطلاعات</string>
    <string name="send_data">در حال ارسال اطلاعات</string>
    <string name="mainmodel">mainModel</string>
    <string name="city">شهز</string>
    <string name="send">ارسال</string>
    <string name="sendAgain">ارسال مجدد</string>
    <string name="send_code">ارسال کد</string>
</resources>