<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_create_note_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_note_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/chip_color_light"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_create_note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_marginRight="10dp"
            android:text="@string/note"
            android:textSize="@dimen/dimen_font_size_large" />

        <ImageView
            android:id="@+id/img_note_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="textMultiLine"
        android:lineHeight="20pt"
        android:padding="@dimen/dimen_padding"
        android:text="@string/add_note"
        android:textDirection="rtl"
        app:layout_constraintBottom_toTopOf="@+id/edt_create_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_note_top" />

    <EditText
        android:id="@+id/edt_create_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border"
        android:gravity="right|top"
        android:hint="@string/txt_note"
        android:minHeight="150dp"
        android:padding="@dimen/dimen_padding"
        android:textDirection="rtl"
        android:inputType="textMultiLine"
        android:fontFamily="@font/iran_sans_mobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_info" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/gray300"
        android:paddingTop="@dimen/dimen_padding"
        android:paddingBottom="@dimen/dimen_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_create_note"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btn_cancel_note"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorLight"
            android:fontFamily="@font/iran_sans_mobile"
            android:gravity="center_horizontal|center_vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/btn_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_insert_note"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_rounded"
            android:fontFamily="@font/iran_sans_mobile"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/btn_save_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
