<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/mainBanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_banner"
                android:layout_width="155dp"
                android:layout_height="155dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/border_sharper"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="181dp"
                android:layout_height="162dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="9dp"
                android:layout_toLeftOf="@id/img_banner"
                android:layout_toEndOf="@+id/img_banner"
                android:gravity="right"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/title_home"
                    android:gravity="right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@string/title"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/city_home"
                    android:gravity="right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/type"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/desc_home"
                    android:gravity="right"
                    android:layout_width="190dp"
                    android:layout_height="89dp"
                    android:layout_marginTop="10dp"
                    android:lines="2"
                    android:text="@string/description"
                    android:textSize="14sp" />

            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>