<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constrain_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/constraint_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constrain_symbols">


        <TextView
            android:id="@+id/txt_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:inputType="textMultiLine"
            android:padding="@dimen/dimen_padding"
            android:lineHeight="16pt"
            android:text="@string/add_desc"
            android:lines="3"
            android:minHeight="100dp"
            android:textSize="@dimen/dimen_font_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            android:textSize="@dimen/dimen_font_size_medium"
            android:inputType="textMultiLine"
            android:lineHeight="16pt"
            android:lines="3"
            android:minHeight="100dp"
            android:padding="@dimen/dimen_padding"
            android:text="@string/add_address"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_description" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_top"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/constrain_symbols"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans"
            android:maxLength="20"
            android:text="@string/detail_title"
            android:textSize="@dimen/dialog_message_text_size_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.974"
            app:layout_constraintStart_toEndOf="@+id/date_detail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.473" />

        <TextView
            android:id="@+id/date_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans"
            android:maxLength="20"
            android:text="@string/detail_date"
            android:textSize="@dimen/dimen_font_size_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain_symbols"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_top">

        <LinearLayout
            android:id="@+id/linear_bookmark"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:background="@drawable/radius_border"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linear_note"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/icon_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_bookmark" />

            <TextView
                android:id="@+id/txt_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:drawablePadding="0dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/bookmark_unselected"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_note"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_border"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linear_bookmark"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/icon_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_add_note" />

            <TextView
                android:id="@+id/txt_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="0dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/note"
                android:textSize="14sp" />


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_detail"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/black"
            android:indeterminateTintMode="src_in"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/linear_bookmark"
            app:layout_constraintEnd_toEndOf="@+id/linear_bookmark"
            app:layout_constraintStart_toStartOf="@+id/linear_bookmark"
            app:layout_constraintTop_toTopOf="@+id/linear_bookmark" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_map"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/border"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constrain_info">

        <Button
            android:id="@+id/btn_show_google_map"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/button_rounded"
            android:fontFamily="@font/iran_sans_mobile"
            android:text="@string/show_google_map"
            app:layout_constraintBottom_toBottomOf="@+id/map_view_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ir.map.sdk_map.maps.MapView
            android:id="@+id/map_view_detail"
            mapbox_cameraZoomMax="20"
            mapbox_cameraZoomMin="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="7dp">

        </ir.map.sdk_map.maps.MapView>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--    </androidx.cardview.widget.CardView>-->
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>